# fastapi-102

./: alembic.ini  database.py  main.py  models.py  pyproject.toml  testdb.db  todos.db  todosapp.db
alembic/versions/: eb64e0cf557d_create_phone_number_for_user_column.py
routers/: admin.py  auth.py  todos.py  users.py
static/css/: base.css
static/js/: base.js
templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  todo.html
test/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
